// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColumnLayout renders correctly for 2 columns 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 > * {
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
}

<div
  className="c0"
>
  <p>
    hello
  </p>
  <p>
    world
  </p>
</div>
`;

exports[`ColumnLayout renders correctly for 4 columns 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 > * {
  -webkit-flex-basis: 25%;
  -ms-flex-preferred-size: 25%;
  flex-basis: 25%;
}

<div
  className="c0"
>
  <p>
    hello
  </p>
  <p>
    world
  </p>
  <p>
    1
  </p>
  <p>
    2
  </p>
</div>
`;
